Cleaned up the code and updated the README.md file

--- a/index.html
+++ b/index.html
@@ -29,19 +29,8 @@
       </div>
     </header>
 
-    <header class="showcase">
-      <div class="container showcase-inner">
-        <h1>Welcome</h1>
-        <p>
-          Bacon ipsum dolor amet salami hamburger shoulder tail, frankfurter
-          ribeye pork belly biltong ham hock pork pork loin pastrami brisket.
-          Chicken doner spare ribs pancetta, ham drumstick short loin andouille
-          landjaeger. Sirloin tenderloin cupim alcatra. Alcatra short ribs
-          capicola, chicken brisket ham strip steak tongue flank picanha
-          bresaola sirloin.
-        </p>
-        <a href="#" class="btn">Read more...</a>
-      </div>
-    </header>
+    <main>
+      
+    </main>
   </body>
 </html>
