Updated the README.md file and downloaded some images

--- a/index.html
+++ b/index.html
@@ -6,27 +6,33 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Dun Laoghaire</title>
     <link rel="stylesheet" href="assets/css/reset.css" />
+    <link href="https://fonts.googleapis.com/css?family=Lato|Roboto+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/my-style.css" />
   </head>
   <body>
     <header>
-      <div class="menu-wrap">
-        <input type="checkbox" class="toggler" />
-        <div class="hamburger"><div></div></div>
-        <div class="menu">
-          <div>
+      <div class="mobile-menu">
+        <div class="menu-wrap">
+          <input type="checkbox" class="toggler" />
+          <div class="hamburger"><div></div></div>
+          <div class="menu">
             <div>
-              <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About DLR</a></li>
-                <li><a href="#">Local attractions</a></li>
-                <li><a href="#">News</a></li>
-                <li><a href="#">Contact</a></li>
-              </ul>
+              <div>
+                <ul>
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">About DLR</a></li>
+                  <li><a href="#">Local attractions</a></li>
+                  <li><a href="#">News</a></li>
+                  <li><a href="#">Contact</a></li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
-      </div>
+        <div class="logo">
+          <p>Dun Laoghaire</p>
+        </div>
+      </div><!--End of .mobile-menu-->
     </header>
 
     <main>
