First page MVP finished

--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Dun Laoghaire</title>
-    <link rel="stylesheet" href="assets/css/reset.css" />
-    <link href="https://fonts.googleapis.com/css?family=Lato|Roboto+Mono&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/my-style.css" />
+    <title>Explore Dun Laoghaire</title>
+    <link rel="stylesheet" href="css/reset.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato|Roboto+Mono&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/my-style.css" />
   </head>
   <body>
     <header>
@@ -24,19 +31,148 @@
                   <li><a href="#">Local attractions</a></li>
                   <li><a href="#">News</a></li>
                   <li><a href="#">Contact</a></li>
+                  <li>
+                    <a
+                      href="#"
+                      class="button-component"
+                      download="assets/downloadable-data/3227_rpt_dlrtourismstrategy_rev4_0.pdf"
+                      ><span><i class="fas fa-cloud-download-alt"></i></span
+                      >Download Guide</a
+                    >
+                  </li>
                 </ul>
               </div>
             </div>
           </div>
         </div>
-        <div class="logo">
-          <p>Dun Laoghaire</p>
-        </div>
-      </div><!--End of .mobile-menu-->
+
+        <!-- End of .logo -->
+      </div>
+      <!--End of .mobile-menu-->
+      <div class="logo">
+        <img src="assets/images/dlh-town-logo.gif" alt="logo" />
+      </div>
     </header>
 
     <main>
-      
+      <div class="landing">
+        <div class="section">
+          <div class="message">
+            <h1>Taste the neighborhood flavor</h1>
+            <p>
+              Whether visiting for business or pleasure you are in the right
+              place to find the best restaurants, hotels, attractions and
+              entertainment our City has to offer.
+            </p>
+            <a
+              href="resources/17311223_1343703459009490_6380084399470864335_o.jpg"
+              class="button-component"
+              download="assets/images/Dive-into-Dun-Laoghaire-1150x767.jpg"
+              ><span><i class="fas fa-cloud-download-alt"></i></span> Download
+              map</a
+            >
+          </div>
+          <!-- End of .message -->
+        </div>
+      </div>
+      <!-- End of .landing -->
+      <div class="activities">
+        <div class="section">
+          <h2>Jump right in <span>things to do</span></h2>
+          <div class="cards">
+            <div class="cards__card">
+              <img src="assets/images/sailing.jpg" alt="Young sailors" />
+              <p>on the water</p>
+            </div>
+            <div class="cards__card">
+              <img src="assets/images/library.jpg" alt="DLR Lexicon library" />
+              <p>arts, culture &amp; entertainment</p>
+            </div>
+            <div class="cards__card">
+              <img
+                src="assets/images/dlr-shoppingcentre.jpg"
+                alt="DLR Shopping Centre"
+              />
+              <p>shopping</p>
+            </div>
+            <div class="cards__card">
+              <img
+                src="assets/images/Rock-Climbing-Dalkey-Adventure-Time.jpg"
+                alt="Rock climbing Dalkey"
+              />
+              <p>sports recreations &amp; spa</p>
+            </div>
+            <div class="cards__card">
+              <img
+                src="assets/images/dinning.jpg"
+                alt="Dinning in Dun LAoghaire"
+              />
+              <p>Dinning &amp; night life</p>
+            </div>
+            <div class="cards__card">
+              <img src="assets/images/sandycove.jpg" alt="Sandycove beach" />
+              <p>nature</p>
+            </div>
+          </div>
+          <!-- End of .cards -->
+        </div>
+        <!-- End of section -->
+      </div>
     </main>
+    <footer>
+      <div class="section">
+        <!-- List with the social media icons -->
+        <div class="footer__social_media">
+          <h3>Hear from us:</h3>
+          <ul>
+            <li>
+              <a href=""><i class="fab fa-facebook"></i></a>
+            </li>
+            <li>
+              <a href=""><i class="fab fa-instagram"></i></a>
+            </li>
+            <li>
+              <a href=""><i class="fab fa-reddit"></i></a>
+            </li>
+          </ul>
+        </div>
+        <!-- End of .footer__social_media -->
+        <!-- Link to Privacy page -->
+        <div class="footer__privacy">
+          <p>Privacy Policy</p>
+          <a href="privacy.html" target="_blank"
+            ><i class="fas fa-shield-alt"></i
+          ></a>
+        </div>
+
+        <!-- end of .footer__privacy -->
+        <!-- A list of different contact media -->
+        <div class="footer__contact_details">
+          <h3>Contact us:</h3>
+          <ul>
+            <li>
+              <a href="tel:1-562-867-5309"
+                ><i class="fas fa-phone-square-alt"></i
+              ></a>
+            </li>
+            <li>
+              <a
+                href="mailto:someone@example.com?Subject=Hello%20again"
+                target="_top"
+                ><i class="fas fa-envelope"></i
+              ></a>
+            </li>
+            <li>
+              <a
+                href="#"
+                download="assets/images/Dive-into-Dun-Laoghaire-1150x767.jpg"
+                ><i class="fas fa-map-marked-alt"></i
+              ></a>
+            </li>
+          </ul>
+        </div>
+        <!-- End of .footer__contact_details -->
+      </div>
+    </footer>
   </body>
 </html>
