--- a/about.html
+++ b/about.html
@@ -75,53 +75,11 @@
         </div>
         <!-- End of .section -->
         <div class="landing__hero">
-          <img src="assets/images/sandycove.jpg" alt="Hero image">
+          <img src="assets/images/sandycove.jpg" alt="Hero image" />
           <div class="landing__hero_gradient"></div>
         </div>
       </div>
       <!-- End of .landing -->
-      <div class="activities">
-        <div class="section">
-          <h2>Jump right in <span>things to do</span></h2>
-          <div class="cards">
-            <div class="cards__card">
-              <img src="assets/images/sailing.jpg" alt="Young sailors" />
-              <p>on the water</p>
-            </div>
-            <div class="cards__card">
-              <img src="assets/images/library.jpg" alt="DLR Lexicon library" />
-              <p>arts, culture &amp; entertainment</p>
-            </div>
-            <div class="cards__card">
-              <img
-                src="assets/images/dlr-shoppingcentre.jpg"
-                alt="DLR Shopping Centre"
-              />
-              <p>shopping</p>
-            </div>
-            <div class="cards__card">
-              <img
-                src="assets/images/Rock-Climbing-Dalkey-Adventure-Time.jpg"
-                alt="Rock climbing Dalkey"
-              />
-              <p>sports recreations &amp; spa</p>
-            </div>
-            <div class="cards__card">
-              <img
-                src="assets/images/dinning.jpg"
-                alt="Dinning in Dun LAoghaire"
-              />
-              <p>Dinning &amp; night life</p>
-            </div>
-            <div class="cards__card">
-              <img src="assets/images/sandycove.jpg" alt="Sandycove beach" />
-              <p>nature</p>
-            </div>
-          </div>
-          <!-- End of .cards -->
-        </div>
-        <!-- End of section -->
-      </div>
     </main>
     <footer>
       <div class="section">
