About.html page finished

--- a/about.html
+++ b/about.html
@@ -75,11 +75,83 @@
         </div>
         <!-- End of .section -->
         <div class="landing__hero">
-          <img src="assets/images/sandycove.jpg" alt="Hero image" />
+          <img src="assets/images/dlr-map.jpg" alt="Hero image" />
           <div class="landing__hero_gradient"></div>
         </div>
       </div>
       <!-- End of .landing -->
+      <div class="about_dun_laoghaire">
+        <div class="section">
+          <h2>History</h2>
+          <p>
+            Dún Laoghaire[15] (/dʌn ˈlɪəri/ dun LEER-ee, Irish: [d̪ˠuːn̪ˠ
+            ˈl̪ˠeːɾʲə] or [d̪ˠuːn̪ˠ ˈl̪ˠiːɾʲə]) is a suburban coastal town in the
+            traditional county of Dublin in Ireland. It is the county town of
+            Dún Laoghaire–Rathdown, one of the three authorities that replaced
+            the old Dublin County Council.
+          </p>
+          <p>
+            The town was built following the 1816 legislation that allowed the
+            building of a major port to serve Dublin. It was known as Dunleary
+            until it was renamed Kingstown in honour of King George IV's 1821
+            visit, and in 1920 was given its present name, the original Irish
+            form of Dunleary. Over time, the town became a residential location,
+            a seaside resort and the terminus of Ireland's first railway.
+          </p>
+          <h2>Sports</h2>
+          <h3>Boating</h3>
+          <p>
+            Dún Laoghaire harbour is home to a number of yacht clubs including
+            the Dún Laoghaire Motor Yacht Club with premises on the West Pier,
+            the Irish National Sailing School & Club based at the foot of the
+            West Pier, the Sailing in Dublin Club with premises in the Coal
+            Harbour, the Royal Irish Yacht Club between the Commissioners for
+            Irish Lights and the marina entrance, the Royal St George Yacht Club
+            opposite the Pavilion Centre, National Yacht Club closest to the
+            East Pier and the Irish Youth Sailing Club which is run by the Dún
+            Laoghaire Coast Guard Kyron O'Gorman and located on the East Pier.
+          </p>
+          <h3>Golf</h3>
+          <p>
+            The town had a golf club from 1909 to 2007, but its members agreed
+            to sell the course to housing developers and move to Ballyman Road,
+            near Enniskerry in County Wicklow.
+          </p>
+          <h2>Tourism</h2>
+          <p>
+            Much of the town's early growth came from visitors from Dublin, and
+            today there is one large hotel, heavily refurbished in 2007, the
+            Royal Marine, along with several small hotels, and a number of
+            bed-and-breakfasts.
+          </p>
+          <h3>Pier Walking</h3>
+          <p>
+            Walking the East Pier of Dún Laoghaire Harbour is the most popular
+            tourism activity in Dún Laoghaire. The west pier is longer but the
+            surface of the pier is less suitable for walking.
+          </p>
+          <h3>Cruise ship visits</h3>
+          <p>
+            In 2011, Dún Laoghaire Harbour published a master plan, which
+            focused on developing Dún Laoghaire as a tourist destination.
+            Specifically, the plan revolved around promoting Dún Laoghaire
+            Harbour as a prime location for both ferries and cruise ships. Since
+            then, many cruise ships have stopped in Dún Laoghaire, usually
+            between the months of May and July. The first ship to arrive was the
+            Cunard liner RMS Queen Mary 2 on 16 May, and P&O's MV Arcadia
+            arrived on 9 July. The Queen Mary 2 was the 7th largest cruise ship
+            in the world at the time, with a maximum passenger capacity of about
+            3,000. Other large vessels to visit Dun Laoghaire include the QE2
+            and the aircraft carrier USS John F. Kennedy.
+          </p>
+          <h3>Outdoor tourism</h3>
+          <p>
+            In July 2013, the first-ever tourism office opened in Dún Laoghaire.
+            Kayaking, kite surfing, paddle boarding and sailing are available,
+            along with facilities for biking and rock climbing.
+          </p>
+        </div>
+      </div>
     </main>
     <footer>
       <div class="section">
