--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 <ul>
                   <li><a href="index.html">Home</a></li>
                   <li><a href="about.html">About DLR</a></li>
-                  <li><a href="#">Local attractions</a></li>
+                  <li><a href="attractions.html">Local attractions</a></li>
                   <li><a href="#">News</a></li>
-                  <li><a href="#">Contact</a></li>
+                  <li><a href="contact.html">Contact</a></li>
                   <li>
                     <a
                       href="#"
