Added the attractions.html page

--- a/about.html
+++ b/about.html
@@ -82,6 +82,15 @@
       <!-- End of .landing -->
       <div class="about_dun_laoghaire">
         <div class="section">
+          <h2>A day in Dun Laoghaire</h2>
+          <video controls>
+            <source
+              src="assets/video/Dun Laoghaire - A Day in the Life.mp4"
+              type="video/mp4"
+            />
+
+            Sorry, your browser doesn't support embedded videos.
+          </video>
           <h2>History</h2>
           <p>
             Dún Laoghaire[15] (/dʌn ˈlɪəri/ dun LEER-ee, Irish: [d̪ˠuːn̪ˠ
