--- a/attractions.html
+++ b/attractions.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Explore Dun Laoghaire</title>
     <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/lightbox.css">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
@@ -30,7 +31,7 @@
                   <li><a href="about.html">About DLR</a></li>
                   <li><a href="attractions.html">Local attractions</a></li>
                   <li><a href="#">News</a></li>
-                  <li><a href="#">Contact</a></li>
+                  <li><a href="contact.html">Contact</a></li>
                   <li>
                     <a
                       href="#"
@@ -64,9 +65,9 @@
               restaurants, hotels and attractions Dun Laoghaire has to offer.
             </p>
             <a
-              href="resources/17311223_1343703459009490_6380084399470864335_o.jpg"
+              href="#"
               class="button-component"
-              download="assets/images/Dive-into-Dun-Laoghaire-1150x767.jpg"
+              download="assets/downloadable-data/dlr_cycle_network_map.pdf"
               ><span><i class="fas fa-cloud-download-alt"></i></span> Download
               map</a
             >
@@ -75,13 +76,29 @@
         </div>
         <!-- End of .section -->
         <div class="landing__hero">
-          <img src="assets/images/sailing.jpg" alt="Hero image" />
+          <img src="assets/images/attractions-hero.jpg" alt="Hero image" />
         </div>
       </div>
       <!-- End of .landing -->
       <div class="attractions">
         <div class="section">
-
+          <div class="attractions__gallery">
+              <a href="assets/images/01.png" data-lightbox="Dun Laoghaire attractions" data-title="St Joseph’s Church in Glasthule"><img src="assets/images/01.png" alt=""></a>
+              <a href="assets/images/02.png" data-lightbox="Dun Laoghaire attractions" data-title="Dun Laoghaire harbour"><img src="assets/images/02.png" alt=""></a>
+              <a href="assets/images/03.png" data-lightbox="Dun Laoghaire attractions" data-title="James Joice Museum"><img src="assets/images/03.png" alt=""></a>
+              <a href="assets/images/04.png" data-lightbox="Dun Laoghaire attractions" data-title="The Pavilion Centre"><img src="assets/images/04.png" alt=""></a>
+              <a href="assets/images/05.png" data-lightbox="Dun Laoghaire attractions" data-title="Dun Laoghaire harbour view"><img src="assets/images/05.png" alt=""></a>
+              <a href="assets/images/06.png" data-lightbox="Dun Laoghaire attractions" data-title="East Pier Sun Shelter"><img src="assets/images/06.png" alt=""></a>
+              <a href="assets/images/07.png" data-lightbox="Dun Laoghaire attractions" data-title="Dun Laoghaire East Pier"><img src="assets/images/07.png" alt=""></a>
+              <a href="assets/images/08.png" data-lightbox="Dun Laoghaire attractions" data-title="Dun Laoghaire Drinking Fountain"><img src="assets/images/08.png" alt=""></a>
+              <a href="assets/images/09.png" data-lightbox="Dun Laoghaire attractions" data-title="40 Foot"><img src="assets/images/09.png" alt=""></a>
+              <a href="assets/images/10.png" data-lightbox="Dun Laoghaire attractions" data-title="East Pier View"><img src="assets/images/10.png" alt=""></a>
+              <a href="assets/images/11.png" data-lightbox="Dun Laoghaire attractions" data-title="People's Park"><img src="assets/images/11.png" alt=""></a>
+              <a href="assets/images/12.png" data-lightbox="Dun Laoghaire attractions" data-title="Marina Museum"><img src="assets/images/12.png" alt=""></a>
+              <a href="assets/images/13.png" data-lightbox="Dun Laoghaire attractions" data-title="Lexicon Library"><img src="assets/images/13.png" alt=""></a>
+              <a href="assets/images/14.png" data-lightbox="Dun Laoghaire attractions" data-title="Yachts moored in Dun Laoghaire"><img src="assets/images/14.png" alt=""></a>
+              <a href="assets/images/15.png" data-lightbox="Dun Laoghaire attractions" data-title="Royal Marine Hotel"><img src="assets/images/15.png" alt=""></a>
+          </div>
         </div>
         <!-- End of .section -->
       </div>
@@ -142,5 +159,6 @@
         <!-- End of .footer__contact_details -->
       </div>
     </footer>
+    <script src="assets/js/lightBox/lightbox-plus-jquery.min.js"></script>
   </body>
 </html>
