--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
         </div>
         <!-- End of .section -->
         <div class="landing__hero">
-          <img src="assets/images/sandycove.jpg" alt="Hero image" />
+          <img src="assets/images/contact-hero.jpg" alt="Hero image" />
         </div>
       </div>
       <!-- End of .landing -->
