--- a/privacy.html
+++ b/privacy.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/my-style.css">
   </head>
   <body>
-    <div class="section">
+    <div class="section privacy">
       <h1>Privacy Policy</h1>
 
       <p>Effective date: November 10, 2019</p>
