Finished the website MVP

--- a/about.html
+++ b/about.html
@@ -27,10 +27,10 @@
               <div>
                 <ul>
                   <li><a href="index.html">Home</a></li>
-                  <li><a href="about.html">About DLR</a></li>
+                  <li class="active-page"><a href="about.html">About DLR</a></li>
                   <li><a href="attractions.html">Local attractions</a></li>
-                  <li><a href="#">News</a></li>
                   <li><a href="contact.html">Contact</a></li>
+                  <li><a href="privacy.html">GDPR policy</a></li>
                   <li>
                     <a
                       href="#"
@@ -49,13 +49,34 @@
         <!-- End of .logo -->
       </div>
       <!--End of .mobile-menu-->
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li class="active-page"><a href="about.html">About DLR</a></li>
+          <li><a href="attractions.html">Local attractions</a></li>
+          <li>
+            <a href="contact.html">Contact</a>
+          </li>
+          <li><a href="privacy.html">GDPR policy</a></li>
+          <li>
+            <a
+              href="#"
+              class="button-component"
+              download="assets/downloadable-data/3227_rpt_dlrtourismstrategy_rev4_0.pdf"
+              ><span><i class="fas fa-cloud-download-alt"></i></span
+              >Download Guide</a
+            >
+          </li>
+        </ul>
+      </nav>
+      <!-- End of nav -->
       <div class="logo">
         <img src="assets/images/dlh-town-logo.gif" alt="logo" />
       </div>
     </header>
 
     <main>
-      <div class="landing">
+      <div class="landing about">
         <div class="section">
           <div class="message">
             <h1>Taste Dun Laoghaire</h1>
