--- a/contact.html
+++ b/contact.html
@@ -29,8 +29,8 @@
                   <li><a href="index.html">Home</a></li>
                   <li><a href="about.html">About DLR</a></li>
                   <li><a href="attractions.html">Local attractions</a></li>
-                  <li><a href="#">News</a></li>
-                  <li><a href="contact.html">Contact</a></li>
+                  <li class="active-page"><a href="contact.html">Contact</a></li>
+                  <li><a href="privacy.html">GDPR policy</a></li>
                   <li>
                     <a
                       href="#"
@@ -45,17 +45,36 @@
             </div>
           </div>
         </div>
-
-        <!-- End of .logo -->
       </div>
       <!--End of .mobile-menu-->
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About DLR</a></li>
+          <li><a href="attractions.html">Local attractions</a></li>
+          <li class="active-page">
+            <a href="contact.html">Contact</a>
+          </li>
+          <li><a href="privacy.html">GDPR policy</a></li>
+          <li>
+            <a
+              href="#"
+              class="button-component"
+              download="assets/downloadable-data/3227_rpt_dlrtourismstrategy_rev4_0.pdf"
+              ><span><i class="fas fa-cloud-download-alt"></i></span
+              >Download Guide</a
+            >
+          </li>
+        </ul>
+      </nav>
+      <!-- End of nav -->
       <div class="logo">
         <img src="assets/images/dlh-town-logo.gif" alt="logo" />
       </div>
+      <!-- End of .logo -->
     </header>
-
     <main>
-      <div class="landing">
+      <div class="landing contact">
         <div class="section">
           <div class="message">
             <h1>Taste Dun Laoghaire</h1>
